--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet" />
     <title>Broadway</title>
   </head>
   <body>
@@ -10,20 +11,20 @@
      <a href="./#">Home</a>
    </p>
    <p>
-     <a href="./#">About</a>
+     <a href="#process">Process</a>
    </p>
    <p>
-     <a href="./#">Work</a>
+     <a href="#work">Work</a>
    </p>
    <p>
-     <a href="./#">Team</a>
+     <a href="#team">Team</a>
    </p>
    <p>
-     <a href="./#">Contact</a>
+     <a href="#contact">Contact</a>
    </p>
    </div>
    <div class="values">
-     <h2>Our Process</h2>
+     <h2 id="process">Our Process</h2>
      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" />
      <h3>Identify</h3>
      <p>
@@ -44,15 +45,15 @@
      <h3>Designed in New York</h3>
    </div>
    <div class="info">
-     <h3>Portfolio</h3>
+     <h3 id="work">Portfolio</h3>
      <p>
        Coming Soon
      </p>
-     <h3>Team</h3>
+     <h3 id="team">Team</h3>
      <p>
        We're Hiring!
      </p>
-     <h3>Contact</h3>
+     <h3 id="contact">Contact</h3>
      <p>
        Phone: (555)-555-5555
      </p>
@@ -66,12 +67,12 @@
   </body>
   <div class="footter">
     <p>
-      &copy;Broadway 2016
+        &copy;Broadway 2016
     <a href="./#">Home</a>
-    <a href="./#">About</a>
-    <a href="./#">Work</a>
-    <a href="./#">Team</a>
-    <a href="./#">Contact</a>
+    <a href="#process">About</a>
+    <a href="#work">Work</a>
+    <a href="#team">Team</a>
+    <a href="#contact">Contact</a>
     </p>
   </div>
 </html>
